...
                  stream: context.read<EventBloc>().friendsEventsStream,
                  builder: (context, events) {
                    // Define the search bar here, outside of `friendWidgets`.
                    Widget searchBar = Padding(
                      padding: const EdgeInsets.fromLTRB(21, 21, 21, 0),
                      child: TextField(
                        key: const Key('search_bar'),
                        controller: _searchController,
                        decoration: InputDecoration(
                          labelText: 'Search friends',
                          border: OutlineInputBorder(),
                          prefixIcon: Icon(Icons.search),
                          focusedBorder: OutlineInputBorder(
...
                    }).toList();
                    content.addAll(friendWidgets.isNotEmpty
                        ? friendWidgets
                        : [
                      Center(
                        child: Text(
                          "No friends found.",
                          style: myTheme.textTheme.bodyMedium,
                        ),
                      ),
                    ]);
                    return Column(
                      children: [
...
