...
            child: Column(
              children: [
                TabBar(
                  controller: _mainTabController,
                  tabs: const [
                    Tab(text: 'My Events'),
                    Tab(text: 'Others Events'),
                  ],
                ),
              ],
            ),
          ),
          BlocConsumer<EventBloc, ModelStates>(listener: (context, state) {
...
                            context,
                            [
                              Padding(
                                padding: const EdgeInsets.all(16.0),
                                child: Center(
                                  child: Text(
                                    _mainTabController.index == 0 ? 'My Events' : 'Friends Events',
                                    style: myTheme.textTheme.headlineMedium
                                  ),
                                ),
                              ),
                              Center(child: Text('No events found.')),
                            ],
...
